kustomize/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    app: gosite
  name: gosite
