kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default
  labels:
    app: default
  annotations:
    app: default
spec:
  replicas: default
  selector:
    matchLabels:
      app: default
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      name: default
      labels:
        app: default
      annotations:
        app: default
    spec:
      containers:
      - name: default
        image: smarman/default:default
        imagePullPolicy: Always
        command:
          - default
        args:
          - default
          #livenessProbe:
          #  httpGet:
          #    path: /about
          #    port: 8080
          #  initialDelaySeconds: 5
          #  periodSeconds: 60
        ports:
        - containerPort: default
        stdin: true
        tty: true
      restartPolicy: defaull
