kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
spec:
  selector:
    app: default
  ports:
  - port: 0
    targetPort: 0
