kustomize/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ing
spec:
  rules:
  - host: default
    http:
      paths:
      - backend:
          serviceName: default
          servicePort: default
        path: /
